@@ -333,12 +333,40 @@ namespace Rivet {
     //@{
 
     /// Get reference data for a named histo
+    /// @todo Move to the templated version when we have C++11 and can have a default fn template type
     const YODA::Scatter2D& refData(const string& hname) const;
 
     /// Get reference data for a numbered histo
+    /// @todo Move to the templated version when we have C++11 and can have a default fn template type
     const YODA::Scatter2D& refData(unsigned int datasetId, unsigned int xAxisId, unsigned int yAxisId) const;
 
-    /// @todo Provide 3D versions as well? (How to distinguish the signatures? Template magic or explicit name?)
+    /// Get reference data for a named histo
+    /// @todo Would be nice to just use these and ditch the S2D no-template version,
+    ///   but we need C++11 for default args in function templates
+    // template <typename T=Scatter2D>
+    /// @todo SFINAE to ensure that the type inherits from YODA::AnalysisObject?
+    template <typename T>
+    const T& refData(const string& hname) const {
+      _cacheRefData();
+      MSG_TRACE("Using histo bin edges for " << name() << ":" << hname);
+      if (!_refdata[hname]) {
+        MSG_ERROR("Can't find reference histogram " << hname);
+        throw Exception("Reference data " + hname + " not found.");
+      }
+      return dynamic_cast<T&>(*_refdata[hname]);
+    }
+
+    /// Get reference data for a numbered histo
+    /// @todo Would be nice to just use these and ditch the S2D no-template version,
+    ///   but we need C++11 for default args in function templates
+    // template <typename T=Scatter2D>
+    /// @todo SFINAE to ensure that the type inherits from YODA::AnalysisObject?
+    template <typename T>
+    const T& refData(unsigned int datasetId, unsigned int xAxisId, unsigned int yAxisId) const {
+      const string hname = makeAxisCode(datasetId, xAxisId, yAxisId);
+      return refData(hname);
+    }
+
     //@}
 
 
@@ -863,7 +891,7 @@ namespace Rivet {
 
     /// Collection of cached refdata to speed up many autobookings: the
     /// reference data file should only be read once.
-    mutable std::map<std::string, Scatter2DPtr> _refdata;
+    mutable std::map<std::string, AnalysisObjectPtr> _refdata;
 
 
   private:
